[TASK] Implemented typoscript in NodeTypes.ts2

--- a/Resources/Private/Templates/TypoScript/DynamicMetaTags.html
+++ b/Resources/Private/Templates/TypoScript/DynamicMetaTags.html
@@ -1,15 +1,15 @@
-<f:if condition="{node.properties.metaTitle}">
+<f:if condition="{metaTitle}">
 	<f:then>
-		<meta name="title" content="{node.properties.metaTitle}" />
+		<meta name="title" content="{metaTitle}" />
 	</f:then>
 </f:if>
-<f:if condition="{node.properties.metaKeywords}">
+<f:if condition="{metaKeywords}">
 	<f:then>
-		<meta name="keywords" content="{node.properties.metaKeywords}" />
+		<meta name="keywords" content="{metaKeywords}" />
 	</f:then>
 </f:if>
-<f:if condition="{node.properties.metaDescription}">
+<f:if condition="{metaDescription}">
 	<f:then>
-		<meta name="description" content="{node.properties.metaDescription}" />
+		<meta name="description" content="{metaDescription}" />
 	</f:then>
 </f:if>
