--- a/Resources/Private/Templates/TypoScript/TitleMenu.html
+++ b/Resources/Private/Templates/TypoScript/TitleMenu.html
@@ -1,7 +1,7 @@
 {namespace typo3=TYPO3\Neos\ViewHelpers}
-<f:if condition="{node.properties.customTitle}">
+<f:if condition="{customTitle}">
 	<f:then>
-		{node.properties.customTitle} - Neos Demo
+		{customTitle} - Neos Demo
 	</f:then>
 	<f:else>
 		<f:if condition="{items}">
