[BUGFIX] Deprecated meta tag title

--- a/Resources/Private/Templates/TypoScript/DynamicMetaTags.html
+++ b/Resources/Private/Templates/TypoScript/DynamicMetaTags.html
@@ -1,4 +1,4 @@
 {namespace ts=TYPO3\TypoScript\ViewHelpers}
-<meta name="title" content="{ts:render(path: 'metaTitle')}" />
+<meta name="author" content="{ts:render(path: 'metaAuthor')}" />
 <meta name="keywords" content="{ts:render(path: 'metaKeywords')}" />
 <meta name="description" content="{ts:render(path: 'metaDescription')}" />
