[BUGFIX] Fixed issue of rendering title
Fixed issue of rendering title.

Change-Id: I6c2df4350509f23384a1ac513927436471d73ac6

--- a/Resources/Private/Templates/TypoScript/TitleMenu.html
+++ b/Resources/Private/Templates/TypoScript/TitleMenu.html
@@ -5,7 +5,7 @@
 				{item.properties.customTitle}{f:if(condition: iterator.isLast, then: '', else: ' - ')}
 			</f:then>
 			<f:else>
-				{item.label}{f:if(condition: iterator.isLast, then: '', else: ' - ')}
+				{item.properties.title}{f:if(condition: iterator.isLast, then: '', else: ' - ')}
 			</f:else>
 		</f:if>
 	</f:for>
