[TASK] Removed unwanted spaces from title tag
Removed unwanted spaces from title tag.

Change-Id: Idd75ed2c9a6f0382421adb3776422d90d2fb8399

--- a/Resources/Private/Templates/TypoScript/TitleMenu.html
+++ b/Resources/Private/Templates/TypoScript/TitleMenu.html
@@ -1,13 +1,1 @@
-<f:if condition="{items}">
-	<f:for each="{items}" as="item" iteration="iterator">
-		<f:if condition="{item.properties.customTitle}">
-			<f:then>
-				{item.properties.customTitle}{f:if(condition: iterator.isLast, then: '', else: ' - ')}
-			</f:then>
-			<f:else>
-				{item.properties.title}{f:if(condition: iterator.isLast, then: '', else: ' - ')}
-			</f:else>
-		</f:if>
-	</f:for>
-</f:if>
-
+<f:if condition="{items}"><f:for each="{items}" as="item" iteration="iterator"><f:if condition="{item.properties.customTitle}"><f:then>{item.properties.customTitle}{f:if(condition: iterator.isLast, then: '', else: ' - ')}</f:then><f:else>{item.properties.title}{f:if(condition: iterator.isLast, then: '', else: ' - ')}</f:else></f:if></f:for></f:if>
